[package]
name = "boring-vault-svm-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core implementation of Boring Vault SVM tools"

[dependencies]
solana-program = "2.2"
anchor-client = "0.31.0"
anchor-lang = "0.31.0"
anchor-gen = "0.3.1"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-system-interface = "1.0.0"
solana-transaction = "2.2"
solana-instruction = "2.2"
solana-account = "2.2"
solana-client = "2.2"
spl-token = "8.0.0"
solana-program-pack = "2.2.1"
spl-associated-token-account-client = "2.0.0"
spl-token-2022 = "8.0.1"
hex = "0.4.3"
solana-address-lookup-table-interface = "2.2"
eyre = "0.6.12"
serde_json = "1.0.140"
spl-associated-token-account = "6.0.0"
base64 = "0.22.1"
solana-sdk = "2.2.2"
solana-transaction-status-client-types = "2.2.7"
