[package]
name = "boring-vault-svm-py"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Python bindings for Boring Vault SVM"

[lib]
name = "boring_vault_svm"
crate-type = ["cdylib"]

[dependencies]
boring-vault-svm-core = { path = "../boring-vault-svm-core" }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
solana-keypair = "2.2"
solana-pubkey = "2.2"
